Mon Apr 28 13:16:32 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Monitor/*:
          New test for the monitoring framework

Mon Apr 28 13:10:32 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/monitor.mpb:
        * MPC/config/tao_etcl.mpb:
        * MPC/config/tao_etcl_parser.mpb:
          New base projects

        * tao/ETCL/*:
          New TAO ETCL library which uses the ACE ETCL library. This will
          replace the orbsvcs ETCL lib

        * tao/Monitor/*:
          New TAO library to get/clear monitor points from a corba client

        * tao/objectid.h:
          Added an id for the Monitor

        * utils/monitor/*:
          Commandline client to retrieve monitor points from a TAO server

        * tao/ORB.cpp:
          Extended rir for Monitor

        * tao/ORB_Core.cpp:
        * tao/ORB_Core.h:
        * tao/ORB_Core.inl:
          Added code to get and store the Monitor

        * tao/orbconf.h:
          When ACE has monitoring enabled we also enable it for TAO

Mon Apr 28 12:42:36 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * tao/ORB_Core.cpp:
        * tao/params.h:
        * tao/params.inl:
        * tao/params.cpp:
        * docs/Options.html:
        * NEWS:

          Added a new ORB parameter, -ORBAcceptErrorDelay, that controls the
          amount of time to wait before attempting to accept new connections
          when a possibly transient error occurs during accepting a new
          connection. A delay of zero indicates that accepting should not be
          attempted again after the transient error and the handler will be
          removed from the reactor.

        * tao/Transport_Acceptor.h:
        * tao/Transport_Acceptor.inl:
        * tao/Transport_Acceptor.cpp:

          Added code to inspect the error behind an accept() failure and
          take action according to the above ORB parameter.  This includes a