@@ -30,7 +30,7 @@
 class TAO_RT_NOTIFY_TEST_Export TAO_Notify_Tests_RT_Application_Command : public TAO_Notify_Tests_Application_Command
 {
 public:
-  /// Constuctor
+  /// Constructor
   TAO_Notify_Tests_RT_Application_Command (void);
 
   /// Destructor
