@@ -34,7 +34,7 @@
 class TAO_RT_NOTIFY_TEST_Export TAO_Notify_Tests_RT_POA_Command : public TAO_Notify_Tests_Command
 {
 public:
-  /// Constuctor
+  /// Constructor
   TAO_Notify_Tests_RT_POA_Command (void);
 
   /// Destructor
